Added file list/check

--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9efdba2a95d9f92f06e528fedcf74f0e5a13ef6ffa6e6eb8e1d58cdca11b43fd"
+  "signature": "sha256:fa169c7bbcc0d5978f4c62ee2d629085ada9928c2092c1d7a40c1a30b8f44cd0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,7 +39,8 @@
       "import os\n",
       "import shutil\n",
       "import subprocess \n",
-      "import time"
+      "import time\n",
+      "import sys"
      ],
      "language": "python",
      "metadata": {},
@@ -87,6 +88,7 @@
       "        ############### Copy bit\n",
       "        if self.copyFiles==True:\n",
       "            print time.strftime('%X %x %Z'),'Copying all data files...'\n",
+      "            sys.stdout.flush()\n",
       "            for thisSetIx in range(len(self.filename_prfx)):\n",
       "                \n",
       "                print '   ' + self.filename_prfx[thisSetIx]\n",
@@ -95,26 +97,28 @@
       "                self.file_ix = self.ix_array[thisSetIx]\n",
       "                self.source_dir = self.source_dir_array[thisSetIx]\n",
       "                \n",
-      "                if self.create_folders():\n",
-      "                    self.create_file_list(thisSetIx)\n",
-      "                    \n",
-      "                    #copy fileset x 4cams\n",
-      "                    for cam, camList in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
-      "                        for i in camList:\n",
-      "                            src = self.source_dir  + 'ccd_' + str(cam+1) + '/' + i\n",
-      "                            dst = self.target_dir + '' + str(cam+1) + '/' + i\n",
-      "        \n",
-      "                            if not os.path.exists(dst):\n",
-      "                                shutil.copy(src, dst)\n",
-      "                                print time.strftime('%X %x %Z'),'      Copied '+ dst\n",
+      "                self.create_folders()\n",
+      "                self.create_file_list(thisSetIx)\n",
+      "                \n",
+      "                #copy fileset x 4cams\n",
+      "                for cam, camList in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
+      "                    for i in camList:\n",
+      "                        src = self.source_dir  + 'ccd_' + str(cam+1) + '/' + i\n",
+      "                        dst = self.target_dir + '' + str(cam+1) + '/' + i\n",
+      "\n",
+      "                        if not os.path.exists(dst):\n",
+      "                            shutil.copy(src, dst)\n",
+      "                            print time.strftime('%X %x %Z'),'      Copied '+ dst\n",
       "        \n",
       "            print time.strftime('%X %x %Z'),'End of file copy'\n",
       "            print time.strftime('%X %x %Z'),''\n",
+      "            sys.stdout.flush()\n",
       "\n",
       "            \n",
       "        ############### Reduction bit\n",
       "        if self.reduceMode=='one_arc':\n",
       "            print 'Starting one-arc reduction'\n",
+      "            sys.stdout.flush()\n",
       "\n",
       "            #first do the 1st reduction as usual\n",
       "            \n",
@@ -124,6 +128,7 @@
       "\n",
       "            if self.doReduce==True:\n",
       "                print time.strftime('%X %x %Z'),'  Reducing master frame', self.filename_prfx[self.startFrom]\n",
+      "                sys.stdout.flush()\n",
       "                self.reduce_all() \n",
       "                print time.strftime('%X %x %Z'),'  First master reduced', self.filename_prfx[self.startFrom]\n",
       "                print time.strftime('%X %x %Z'),''\n",
@@ -132,6 +137,7 @@
       "            \n",
       "            #replace flats and arcs for datasets>0\n",
       "            print time.strftime('%X %x %Z'),'   Copying reduced flats and arcs to subsequent data sets'\n",
+      "            sys.stdout.flush()\n",
       "            self.copy_flat_arc()\n",
       "\n",
       "            no_masters = range(len(self.filename_prfx))\n",
@@ -139,6 +145,7 @@
       "            for i in no_masters:\n",
       "\n",
       "                print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "                sys.stdout.flush()\n",
       "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "                self.file_ix = self.ix_array[i]\n",
       "                self.create_file_list(i)\n",
@@ -149,6 +156,7 @@
       "            #reduce single dataset\n",
       "            i=self.reduceSet\n",
       "            print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "            sys.stdout.flush()\n",
       "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "            self.file_ix = self.ix_array[i]\n",
       "            self.create_file_list(i)\n",
@@ -159,6 +167,7 @@
       "            #reduce single dataset\n",
       "            i=self.reduceSet\n",
       "            print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "            sys.stdout.flush()\n",
       "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "            self.file_ix = self.ix_array[i]\n",
       "            self.create_file_list(i)\n",
@@ -172,6 +181,7 @@
       "            for i in range(self.startFrom,len(self.filename_prfx)):\n",
       "                \n",
       "                print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "                sys.stdout.flush()\n",
       "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "                self.file_ix = self.ix_array[i]\n",
       "                self.create_file_list(i)\n",
@@ -183,6 +193,7 @@
       "            for i in range(self.startFrom,len(self.filename_prfx)):\n",
       "                \n",
       "                print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "                sys.stdout.flush()\n",
       "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "                self.file_ix = self.ix_array[i]\n",
       "                self.create_file_list(i)\n",
@@ -200,6 +211,30 @@
       "        self.files4 =  [self.filename_prfx[thisSetIx] +'4' + str(name).zfill(4)+ '.fits' for name in self.file_ix]\n",
       "        \n",
       "        print time.strftime('%X %x %Z'),'Created filenames for 4 channels. Example:', str(self.files1)\n",
+      "        sys.stdout.flush()\n",
+      "        \n",
+      "    def collect_red_files(self):\n",
+      "        \n",
+      "        for i in range(len(self.filename_prfx)):\n",
+      "            print time.strftime('%X %x %Z'),'Copying results from Dataset #', i\n",
+      "            sys.stdout.flush()\n",
+      "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
+      "            self.file_ix = self.ix_array[i]\n",
+      "            self.create_file_list(i)\n",
+      "\n",
+      "            for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
+      "                os.chdir(self.target_dir + str(cam+1) + '/')\n",
+      "                print time.strftime('%X %x %Z'),'current folders is',self.target_dir + str(cam+1) + '/'\n",
+      "                obj_files = np.array(j[2:])\n",
+      "                for obj in obj_files:\n",
+      "                    print '      Copying '+ obj[:-5]+'red.fits to ' + self.final_dir + 'cam' + str(cam+1) + '/'  \n",
+      "                    sys.stdout.flush()\n",
+      "                    try:\n",
+      "                        shutil.copyfile(obj[:-5]+'red.fits', self.final_dir + 'cam' + str(cam+1) + '/' + obj[:-5]+'red.fits')\n",
+      "                    except:\n",
+      "                        print '^^^^^Could not copy'\n",
+      "                        sys.stdout.flush()\n",
+      "        \n",
       "        \n",
       "        \n",
       "    def create_folders(self):\n",
@@ -210,9 +245,11 @@
       "            if ((ex.errno == 66) or (ex.errno == 17)):\n",
       "                if self.overwrite==True:\n",
       "                    print time.strftime('%X %x %Z'),'>>>> Overwriting', self.target_dir\n",
+      "                    sys.stdout.flush()\n",
       "                    os.system('rm -r '+self.target_dir )\n",
       "                else:\n",
       "                    print time.strftime('%X %x %Z'),'Target folder', self.target_dir,' not empty. Overwrite is off. '\n",
+      "                    sys.stdout.flush()\n",
       "                    return False\n",
       "        os.mkdir(self.target_dir)\n",
       "        os.mkdir(self.target_dir+'1/')\n",
@@ -227,7 +264,9 @@
       "            os.mkdir(self.final_dir+'cam4/')\n",
       "        except:\n",
       "            print time.strftime('%X %x %Z'),'>>>> Final folder creation failed(no biggie), please check '+self.final_dir\n",
-      "        return True\n",
+      "            sys.stdout.flush()\n",
+      "\n",
+      "            return True\n",
       "    \n",
       "    \n",
       "            \n",
@@ -245,6 +284,7 @@
       "                print '      Flat ',j[0]\n",
       "                print '      Arc ',j[1]\n",
       "                print '      Science files ' + str(j[2:])\n",
+      "                sys.stdout.flush()\n",
       "\n",
       "\n",
       "                #flat\n",
@@ -264,6 +304,7 @@
       "                os_command += ' -OUT_DIRNAME '  + j[0][:-5]+'_outdir'\n",
       "                os.system('cleanup')\n",
       "                print '      OS Command '+ os_command\n",
+      "                sys.stdout.flush()\n",
       "    #             out = subprocess.call(os_command, env = env, shell = True)\n",
       "                os.system(os_command)\n",
       "\n",
@@ -277,6 +318,7 @@
       "                        return False\n",
       "\n",
       "                print time.strftime('%X %x %Z'),'      >>Reducing arc'    \n",
+      "                sys.stdout.flush()\n",
       "                os.mkdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')                   \n",
       "                os_command =  'drcontrol'\n",
       "                os_command += ' reduce_arc '  + j[1]\n",
@@ -286,6 +328,7 @@
       "                os_command += ' -OUT_DIRNAME ' + j[1][:-5]+'_outdir'\n",
       "                os.system('cleanup')\n",
       "                print '      OS Command '+ os_command\n",
+      "                sys.stdout.flush()\n",
       "    #             out = subprocess.call(os_command, env = env, shell = True)\n",
       "                os.system(os_command)\n",
       "    #                         shutil.copyfile(j[self.flat][:-5] + 'tlm.fits', '../../cam' +str(cam)+'/'+ j[self.flat][:-5] + 'tlm.fits')\n",
@@ -293,6 +336,7 @@
       "\n",
       "                #flat\n",
       "                print time.strftime('%X %x %Z'),'      >>Scrunching flat'    \n",
+      "                sys.stdout.flush()\n",
       "                os_command =  'drcontrol'\n",
       "                os_command += ' reduce_fflat ' + j[0]\n",
       "                os_command += ' -idxfile ' + self.idxFile\n",
@@ -301,6 +345,7 @@
       "                os_command += ' -OUT_DIRNAME ' + j[0][:-5]+'_outdir'\n",
       "                os.system('cleanup')\n",
       "                print '      OS Command '+ os_command\n",
+      "                sys.stdout.flush()\n",
       "    #             out = subprocess.call(os_command, env = env, shell = True)\n",
       "                os.system(os_command)\n",
       "\n",
@@ -351,6 +396,7 @@
       "            #copy this set\n",
       "            for src,tgt in zip(src_list, target_list):\n",
       "                print 'Copying ',src,' to ',tgt\n",
+      "                sys.stdout.flush()\n",
       "                shutil.copyfile(src,tgt)\n",
       "            \n",
       "            \n",
@@ -370,6 +416,7 @@
       "                    return False\n",
       "\n",
       "            print time.strftime('%X %x %Z'),'      >>Reducing science '+ obj                        \n",
+      "            sys.stdout.flush()\n",
       "            os.mkdir(obj[:-5]+'_outdir')                   \n",
       "            os_command =  'drcontrol'\n",
       "            os_command += ' reduce_object ' + obj\n",
@@ -383,10 +430,12 @@
       "            os.system('cleanup')\n",
       "\n",
       "            print '      OS Command '+ os_command\n",
+      "            sys.stdout.flush()\n",
       "#                                     out = subprocess.call(os_command, env = env, shell = True)\n",
       "            os.system(os_command)\n",
       "    \n",
-      "            print '      Copying '+ obj[:-5]+'red.fits to ' + self.final_dir + 'cam' + str(cam+1) + '/'               \n",
+      "            print '      Copying '+ obj[:-5]+'red.fits to ' + self.final_dir + 'cam' + str(cam+1) + '/'  \n",
+      "            sys.stdout.flush()\n",
       "            shutil.copyfile(obj[:-5]+'red.fits', self.final_dir + 'cam' + str(cam+1) + '/' + obj[:-5]+'red.fits')\n",
       "#                                     shutil.copyfile(obj, '../../cam' +str(cam)+'/'+ obj)\n",
       "    \n",
