script to create_obj.obj

--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:e8966029e0ebf1562b0f3299f2232824cd48afcaac0377bf26f1e3e89bb8ff8b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -343,7 +344,123 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "cd ~/Documents/HERMES/reductions/47Tuc_core_6.2/"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/Carlos/Documents/HERMES/reductions/47Tuc_core_6.2\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pickle\n",
+      "import pylab as plt\n",
+      "import numpy as np"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "filename = 'Brght24.obj'\n",
+      "filehandler = open(filename, 'r')\n",
+      "thisStar = pickle.load(filehandler)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 40
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "thisCam = thisStar.exposures.cameras[2]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print np.nansum(thisCam.red_fluxes,1)\n",
+      "print np.nansum(thisCam.wavelengths,1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[       0.                0.                0.                0.\n",
+        "  4316282.73271179  4425343.20715332  4078741.29594421  5341725.28952026\n",
+        "  4933299.46809387  2589766.17042542  4096577.0745697   4407186.85522461\n",
+        "  4251229.01542664  2153241.94611359  2788639.80212402  2648424.04494476]\n",
+        "[        0.                 0.                 0.                 0.\n",
+        "  27064319.99999851  27064319.99999851  27064319.99999851\n",
+        "  27064319.99999851  27064319.99999851  27064319.99999851\n",
+        "  27064319.99999851  27064319.99999851  27064319.99999851\n",
+        "  27064319.99999851  27064319.99999851  27064319.99999851]\n"
+       ]
+      }
+     ],
+     "prompt_number": 48
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in a.sigmas[:]:\n",
+      "    plt.plot(i)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "i=0\n",
+      "for x,y,label in zip(thisCam.wavelengths, thisCam.red_fluxes, thisCam.fileNames):\n",
+      "    plt.plot(x,y+i, label= label, c='k')\n",
+      "    i+=300\n",
+      "plt.title(thisStar.name)\n",
+      "# plt.legend(loc = 0)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "N104-S2214.obj"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
