--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:fe8f03319cbdd827a0d0245aa161fb8b21cd56fe6afbd0203c214be5bbf99de8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -39,7 +40,6 @@
       "    def __init__(self, name):\n",
       "        self.load_star_data(name = name)\n",
       "        \n",
-      "        \n",
       "    def load_star_data(self, name):\n",
       "        \n",
       "#         stetson_df = pandas.read_pickle('stetson.pd')\n",
@@ -48,10 +48,9 @@
       "            a = pf.open(thisFile)\n",
       "            b = a['FIBRES'].data\n",
       "            idx = b.field('NAME').strip()==name\n",
-      "            \n",
       "            if b[idx].shape[0] >0:\n",
       "                starInfo = b[idx][0]\n",
-      "                \n",
+      "\n",
       "                self.name = starInfo.field('NAME').strip()\n",
       "                self.RA_dec = starInfo.field('RA')\n",
       "                self.Dec_dec = starInfo.field('DEC')        \n",
@@ -118,6 +117,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import sys"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "class exposures():\n",
       "\n",
       "    def __init__(self):\n",
@@ -136,61 +146,79 @@
       "        self.cameras = np.array([a,b,c,d])\n",
       "        \n",
       "    def load_exposures(self, name):\n",
-      "\n",
-      "        for camIdx in range(4):\n",
+      "        \n",
+      "        print 'Collecting MJDs from all 4 channels'\n",
+      "        for camIdx, cam in enumerate(self.cameras):\n",
       "            files = glob.glob('cam'+str(camIdx+1)+'/*.fits')\n",
-      "            thisCam = self.cameras[camIdx]\n",
+      "            print 'cam'+str(camIdx+1)+':',len(files) #,files\n",
       "            for thisFile in files:    \n",
+      "                HDUList = pf.open(thisFile)\n",
+      "                self.JDs.append(HDUList[0].header['UTMJD'])\n",
+      "        a = np.unique(np.round(np.array(self.JDs).astype(float),3))\n",
+      "        self.JDs = np.sort(a)\n",
+      "        nExposures = len(a)\n",
+      "        print nExposures, 'exposures per channel'\n",
+      "        print ''\n",
+      "        \n",
+      "        #create top_level arrays\n",
+      "        self.UTdates = np.chararray(nExposures)\n",
+      "        self.UTstarts = np.chararray(nExposures)\n",
+      "        self.UTends = np.chararray(nExposures)\n",
+      "        self.lengths = np.zeros(nExposures)\n",
+      "        self.plates = np.chararray(nExposures)\n",
+      "        self.pivots = np.zeros(nExposures)\n",
+      "        self.HRs = np.zeros(nExposures).astype(bool)\n",
+      "        \n",
+      "\n",
+      "        \n",
+      "        for camIdx, cam in enumerate(self.cameras):\n",
+      "            files = glob.glob('cam'+str(camIdx+1)+'/*.fits')\n",
+      "            print 'cam'+str(camIdx+1),len(files),'files'\n",
+      "            \n",
+      "            thisCam = cam\n",
+      "            \n",
+      "            #create camera level arrays\n",
+      "            thisCam.red_fluxes = np.zeros((nExposures, 4096))\n",
+      "            thisCam.wavelengths = np.zeros((nExposures, 4096))\n",
+      "            thisCam.fileNames = np.chararray(nExposures)\n",
+      "\n",
+      "            \n",
+      "            for thisFile in files: \n",
+      "                print 'Opening',thisFile,\n",
       "                HDUList = pf.open(thisFile)\n",
       "                fibreTable = HDUList['FIBRES'].data            \n",
       "                idx = fibreTable.field('NAME').strip()==name\n",
-      "\n",
       "                if np.sum(idx)>0:  #star found in fits file \n",
-      "                    if camIdx == 0: #one time per exposure (because they are equal in all cameras)\n",
-      "                        self.UTdates.append(HDUList[0].header['UTDATE'])\n",
-      "                        self.UTstarts.append(HDUList[0].header['UTSTART'])\n",
-      "                        self.UTends.append(HDUList[0].header['UTEND'])\n",
-      "                        try:self.lengths.append(HDUList[0].header['EXPOSED'])\n",
-      "                        except: self.lengths.append(0)\n",
-      "                        self.JDs.append(HDUList[0].header['UTMJD'])\n",
-      "                        self.plates.append(HDUList[0].header['SOURCE'])\n",
-      "                        self.pivots.append(fibreTable.field('PIVOT')[idx][0])\n",
-      "                        if HDUList[0].header['SLITMASK'].strip()=='OUT':\n",
-      "                            self.HRs.append(False)\n",
-      "                        else:\n",
-      "                            self.HRs.append(True)\n",
-      "                    thisCam.red_fluxes.append(HDUList[0].data[idx][0])\n",
-      "                    thisCam.wavelengths.append(self.extract_HERMES_wavelength(HDUList[0].header))\n",
-      "                    thisCam.fileNames.append(thisFile.split('/')[-1])\n",
       "                    \n",
-      "                        \n",
+      "                    #one time per exposure (because they are equal in all cameras)\n",
+      "                    thisMJDidx = ''\n",
+      "                    thisMJDidx = np.where(self.JDs==round(float(HDUList[0].header['UTMJD']),3))[0]\n",
+      "                    if len(thisMJDidx)>0:\n",
+      "                        thisMJDidx = thisMJDidx[0]\n",
+      "                        print 'MJD',self.JDs[thisMJDidx]                          \n",
+      "                        self.UTdates[thisMJDidx] = HDUList[0].header['UTDATE']\n",
+      "                        self.UTstarts[thisMJDidx] = HDUList[0].header['UTSTART']\n",
+      "                        self.UTends[thisMJDidx] = HDUList[0].header['UTEND']\n",
+      "                        try:self.lengths[thisMJDidx] = HDUList[0].header['EXPOSED']\n",
+      "                        except: pass\n",
+      "#                         self.JDs.append(HDUList[0].header['UTMJD'])\n",
+      "                        self.plates[thisMJDidx] = HDUList[0].header['SOURCE']\n",
+      "                        self.pivots[thisMJDidx] = int(fibreTable.field('PIVOT')[idx][0])\n",
+      "                        if HDUList[0].header['SLITMASK'].strip()=='OUT':\n",
+      "                            self.HRs[thisMJDidx] = False\n",
+      "                        else:\n",
+      "                            self.HRs[thisMJDidx] = True\n",
+      "                                  \n",
+      "                        thisCam.red_fluxes[thisMJDidx] = HDUList[0].data[idx][0]\n",
+      "                        thisCam.wavelengths[thisMJDidx] = self.extract_HERMES_wavelength(HDUList[0].header)\n",
+      "                        thisCam.fileNames[thisMJDidx] = thisFile.split('/')[-1]\n",
+      "                    else:\n",
+      "                        print name, 'found in', thisFile, 'but no matching date' \n",
+      "                else:\n",
+      "                    print name,'not found in', thisFile\n",
       "\n",
-      "            sortOrder = np.argsort(self.JDs)\n",
-      "            self.UTdates = np.array(self.UTdates)[sortOrder]\n",
-      "            self.UTstarts = np.array(self.UTstarts)[sortOrder]\n",
-      "            self.UTends = np.array(self.UTends)[sortOrder]\n",
-      "            self.lengths = np.array(self.lengths)[sortOrder]\n",
-      "            self.JDs = np.array(self.JDs)[sortOrder]\n",
-      "            self.HRs = np.array(self.HRs)[sortOrder]\n",
-      "            self.plates = np.array(self.plates)[sortOrder]\n",
-      "            self.pivots = np.array(self.pivots)[sortOrder]\n",
-      "\n",
-      "            thisCam.red_fluxes = np.array(thisCam.red_fluxes)[sortOrder]\n",
-      "            thisCam.wavelengths = np.array(thisCam.wavelengths)[sortOrder]\n",
-      "            thisCam.fileNames = np.array(thisCam.fileNames)[sortOrder]\n",
-      "#             self.UTdates = np.array(self.UTdates)\n",
-      "#             self.UTstarts = np.array(self.UTstarts)\n",
-      "#             self.UTends = np.array(self.UTends)\n",
-      "#             self.lengths = np.array(self.lengths)\n",
-      "#             self.JDs = np.array(self.JDs)\n",
-      "#             self.HRs = np.array(self.HRs)\n",
-      "#             self.plates = np.array(self.plates)\n",
-      "#             self.pivots = np.array(self.pivots)\n",
-      "#             thisCam.red_fluxes = np.array(thisCam.red_fluxes)\n",
-      "#             thisCam.wavelengths = np.array(thisCam.wavelengths)\n",
-      "#             thisCam.fileNames = np.array(thisCam.fileNames)\n",
       "            thisCam.safe_flag = np.ones(len(thisCam.fileNames)).astype(bool)\n",
-      "\n",
+      "            print ''\n",
       "\n",
       "            \n",
       "    def extract_HERMES_wavelength(self, header):\n",
@@ -221,7 +249,15 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
