--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fe8f03319cbdd827a0d0245aa161fb8b21cd56fe6afbd0203c214be5bbf99de8"
+  "signature": "sha256:17458e3f10d662bbe4845e83e1092e59e7820d5804ca2f0ed1a3aaf974d31d45"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,9 +17,8 @@
       "import numpy as np\n",
       "import pyfits as pf\n",
       "import pickle\n",
-      "import TableBrowser as tb\n",
       "import toolbox\n",
-      "import pandas\n"
+      "# import pandas\n"
      ],
      "language": "python",
      "metadata": {},
