A few patches to create obj and red. Added NPYs and RV plots

--- a/RV/RV_HD1581_6.0.ipynb
+++ b/RV/RV_HD1581_6.0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:85b79dc32756bb6cc1851f55597a647baa3378ba80375ae278d17cdbd48cc5fa"
+  "signature": "sha256:6ad850c7e16e4e8cd2062aa5dba3f2f2553a8e9314fdd03f5cb6223062707fd9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1181,10 +1181,9 @@
       "        plt.plot(x,y1+i, label= label, c='k')\n",
       "    plt.title(thisStar.name)\n",
       "    plt.yticks = thisCam.fileNames \n",
-      "    plt.savefig('plots/HD1581_'+str(cam), dpi = 1000 )\n",
-      "    \n",
-      "    plt.close()\n",
-      "#     plt.show()"
+      "#     plt.savefig('plots/HD1581_'+str(cam), dpi = 1000 )\n",
+      "    plt.show()    \n",
+      "    plt.close()\n"
      ],
      "language": "python",
      "metadata": {},
