--- a/RV/RV_HD285507_one_arc.ipynb
+++ b/RV/RV_HD285507_one_arc.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cffd4c69ac950397dee06603194f4243a1d8f73c46f71d0111eb206148aed80e"
+  "signature": "sha256:17829fcd592630329a200679156a43fe13abc0822499b97d7df390be24d88bc5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20571,7 +20571,7 @@
       "\n",
       "for i in range(len(fileList)):\n",
       "\n",
-      "    print i,fileList[i]\n",
+      "    print i,fileList[i],\n",
       "    filehandler = open(fileList[i], 'r') \n",
       "    thisStar = pickle.load(filehandler) \n",
       "    if ((thisStar.exposures.cameras[0].sigmas.all()!=0) and\n",
@@ -20593,6 +20593,8 @@
       "        thisStar = None\n",
       "    else:\n",
       "        print 'Sigma=0'\n",
+      "\n",
+      "    print ''\n",
       "    \n",
       "data = np.array(data)\n",
       "order = np.argsort(data[:,2].astype(int))\n",
