--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5266e0d9af9a4ffc2f8f5d5642eae9b5d6f7b9fd8882eaefd1db2ce0327cce28"
+  "signature": "sha256:69b50c3167b689d780e96a97b9114894ab8a26868085676f1f5cc046da1a7477"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,7 +16,8 @@
       "import pickle\n",
       "import pylab as plt\n",
       "from scipy import interpolate, signal, optimize, constants\n",
-      "import pyfits as pf"
+      "import pyfits as pf\n",
+      "import sys"
      ],
      "language": "python",
      "metadata": {},
@@ -161,55 +162,113 @@
      "collapsed": false,
      "input": [
       "#Create cross correlation curves wrt epoch 0\n",
-      "def RVs_CC_t0(thisStar, xDef = 1):\n",
+      "def RVs_CC_t0(thisStar, xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10):\n",
       "\n",
-      "    for thisCam in thisStar.exposures.cameras:\n",
+      "    print '#############################################################################################################'\n",
+      "    print '#############################################################################################################'\n",
+      "    print '#############################################################################################################'\n",
+      "\n",
+      "#     validDates = np.all([np.nansum(thisCam.red_fluxes,1).astype(bool) for thisCam in thisStar.exposures.cameras],0)\n",
+      "    \n",
+      "    for j,thisCam in enumerate(thisStar.exposures.cameras):\n",
       "        RVs = []\n",
       "        sigmas = [] \n",
       "        Qs = []\n",
       "        SNRs = []\n",
       "\n",
-      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[0], thisCam.red_fluxes[0], thisCam)\n",
-      "\n",
+      "        validDates = np.nansum(thisCam.red_fluxes,1).astype(bool)\n",
+      "        \n",
+      "        print 'Camera',j,validDates\n",
+      "        \n",
+      "        if len(np.arange(len(validDates))[validDates])>0:\n",
+      "            CCReferenceSet = np.arange(len(validDates))[validDates][0]\n",
+      "        else:\n",
+      "            CCReferenceSet = 0\n",
+      "            \n",
+      "            \n",
+      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[CCReferenceSet], thisCam.red_fluxes[CCReferenceSet], thisCam)\n",
+      "        print 'Reference wl,fl sum', np.nansum(lambda1), np.nansum(flux1)\n",
+      "        print \n",
+      "        \n",
+      "        plts = 0    \n",
       "        for i, JD in enumerate(thisStar.exposures.JDs):\n",
-      "            print JD,\n",
+      "            print 'Set,MJD',i,JD\n",
       "            lambda2, flux2 = clean_flux(thisCam.wavelengths[i], thisCam.red_fluxes[i], thisCam)\n",
-      "            CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
-      "#             plt.plot(flux1)\n",
-      "#             plt.plot(flux2)\n",
-      "#             plt.plot(CCCurve)\n",
-      "#             plt.show()\n",
-      "            \n",
-      "            corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
-      "            p_guess = [corrMax,xDef]\n",
-      "            x_mask = np.arange(corrMax-2, corrMax+2+1)\n",
-      "            p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
-      "            \n",
-      "            if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
-      "                pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
+      "            print 'This wl,fl sum', np.nansum(lambda2), np.nansum(flux2)\n",
+      "\n",
+      "            if validDates[i]==True:\n",
+      "                CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
+      "#                 CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
+      "#                 if i <5:\n",
+      "#                     plt.plot(flux1)\n",
+      "#                     plt.plot(flux2)\n",
+      "#                     plt.plot(CCCurve)\n",
+      "#                     plt.show()\n",
+      "                print 'max_idx, len(CCCurve) =',np.where(CCCurve==max(CCCurve)), CCCurve.shape\n",
+      "                try:\n",
+      "                    corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
+      "                except: \n",
+      "                    print 'cc',CCCurve,\n",
+      "#                     if plts<5:\n",
+      "#                         plts+=1\n",
+      "#                         plt.plot(flux1)\n",
+      "#                         plt.plot(flux2)\n",
+      "#                         plt.plot(CCCurve)\n",
+      "#                         plt.show()\n",
+      "\n",
+      "                p_guess = [corrMax,corrHWidth]\n",
+      "                x_mask = np.arange(corrMax-corrHWidth, corrMax+corrHWidth+1)\n",
+      "                if max(x_mask)<len(CCCurve):\n",
+      "    #                 try:\n",
+      "    #                 print '4 params',p_guess, x_mask, np.sum(x_mask), CCCurve.shape\n",
+      "                    p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
+      "                    print 'p result',p\n",
+      "                    if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
+      "                        pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
+      "                    else:\n",
+      "                        pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
+      "    #                 except:\n",
+      "    #                     pixelShift = 0\n",
+      "\n",
+      "                    thisQ, thisdRV = QdRV(thisCam.wavelengths[i], thisCam.red_fluxes[i])\n",
+      "                    print  ' thisQ, thisdRV',thisQ, thisdRV\n",
+      "\n",
+      "                    mid_px = thisCam.wavelengths.shape[1]/2\n",
+      "                    dWl = (thisCam.wavelengths[i,mid_px+1]-thisCam.wavelengths[i,mid_px]) / thisCam.wavelengths[i,mid_px]\n",
+      "                    RV = dWl * pixelShift * constants.c \n",
+      "                    print 'RV',RV\n",
+      "\n",
+      "                    SNR = np.median(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
+      "                else:\n",
+      "                    R = 0\n",
+      "                    thisQ = 0\n",
+      "                    thisdRV = 0\n",
+      "                    RV = 0\n",
+      "                    print 'Invalid data point'\n",
+      "\n",
       "            else:\n",
-      "                pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
+      "#                 if i==CCReferenceSet:\n",
+      "#                     print 'The CC reference set is not present. Can\\'t continue. Launch again with different reference set.'\n",
+      "#                     sys.exit()\n",
+      "                SNR = 0\n",
+      "                thisQ = 0\n",
+      "                thisdRV = 0\n",
+      "                RV = 0\n",
+      "                print 'Invalid data point'\n",
       "\n",
-      "            thisQ, thisdRV = QdRV(thisCam.wavelengths[i], thisCam.red_fluxes[i])\n",
+      "            print ''\n",
       "\n",
-      "            RV = np.array((thisCam.wavelengths[0,1]-thisCam.wavelengths[0,0])\n",
-      "                          /thisCam.wavelengths[0,0]*constants.c*\n",
-      "                          pixelShift)\n",
-      "\n",
-      "            SNR = np.median(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
-      "            \n",
-      "            \n",
       "            SNRs.append(SNR)\n",
       "            Qs.append(thisQ)\n",
       "            sigmas.append(thisdRV)\n",
       "            RVs.append(RV)\n",
       "\n",
+      "\n",
       "                \n",
       "        thisCam.sigmas = np.array(sigmas)\n",
       "        thisCam.Qs = np.array(Qs)\n",
       "        thisCam.RVs = np.array(RVs)\n",
-      "        thisCam.SNRs = np.array(SNRs)\n",
-      "        print ''"
+      "        thisCam.SNRs = np.array(SNRs)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -425,14 +484,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "code",
