--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:17458e3f10d662bbe4845e83e1092e59e7820d5804ca2f0ed1a3aaf974d31d45"
+  "signature": "sha256:f636a04570af914b817f420036f288347dcb9f144986f22f52cd255a078a3548"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -160,15 +160,14 @@
       "        print ''\n",
       "        \n",
       "        #create top_level arrays\n",
-      "        self.UTdates = np.chararray(nExposures)\n",
-      "        self.UTstarts = np.chararray(nExposures)\n",
-      "        self.UTends = np.chararray(nExposures)\n",
+      "        self.UTdates = np.chararray(nExposures,10)\n",
+      "        self.UTstarts = np.chararray(nExposures,10)\n",
+      "        self.UTends = np.chararray(nExposures,10)\n",
       "        self.lengths = np.zeros(nExposures)\n",
-      "        self.plates = np.chararray(nExposures)\n",
+      "        self.plates = np.chararray(nExposures,10)\n",
       "        self.pivots = np.zeros(nExposures)\n",
       "        self.HRs = np.zeros(nExposures).astype(bool)\n",
       "        \n",
-      "\n",
       "        \n",
       "        for camIdx, cam in enumerate(self.cameras):\n",
       "            files = glob.glob('cam'+str(camIdx+1)+'/*.fits')\n",
@@ -179,7 +178,8 @@
       "            #create camera level arrays\n",
       "            thisCam.red_fluxes = np.zeros((nExposures, 4096))\n",
       "            thisCam.wavelengths = np.zeros((nExposures, 4096))\n",
-      "            thisCam.fileNames = np.chararray(nExposures)\n",
+      "            thisCam.fileNames = np.chararray(nExposures,18)\n",
+      "            thisCam.fileNames[:] =  ''\n",
       "\n",
       "            \n",
       "            for thisFile in files: \n",
@@ -249,14 +249,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
