fixed max() failing on empty CCCurve

--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:415226a6fc6d62ba4a44df0815dab83503b6bb2a61f7516af11cdeab8b471a43"
+  "signature": "sha256:83540e8538c748f215add5776a6e6680099bbf08e3a647fc297b40843fd0c299"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -238,8 +238,9 @@
       "\n",
       "    X = JDs\n",
       "    Y = RVs\n",
+      "    print X,Y\n",
       "    if RVClip>-1:Y[np.abs(Y)>RVClip] = np.nan\n",
-      "    if RVClip>-1:Y[np.median(Y)>RVClip] = np.nan\n",
+      "#     if sigmaClip>-1:Y[np.median(Y)>RVClip] = np.nan\n",
       "    YERR = sigmas\n",
       "    \n",
       "    colors = ['b','g','r','cyan']\n",
@@ -256,27 +257,22 @@
       "    plt.title('RV - All Stars')\n",
       "#     plt.plot(JDs, -thisStar.exposures.rel_baryVels, label = 'Barycentric Vel. ')\n",
       "    \n",
-      "    for i in range(Y.shape[0])[:3]:\n",
-      "        for cam in range(4)[:0]:\n",
-      "            plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
+      "    for i in range(Y.shape[0])[:]:\n",
+      "        for cam in range(4)[:]:\n",
+      "            print i,cam\n",
+      "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
+      "            plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "    \n",
-      "#             thisCam = thisStar.exposures.cameras[0]\n",
-      "#             # RVMask = thisStar.exposures.my_data_mask\n",
-      "#             # RVMask = ((thisStar.exposures.my_data_mask) & (np.abs(thisCam.RVs)<50000))\n",
-      "#             RVMask = thisCam.safe_flag\n",
-      "#         #     plt.scatter(thisStar.exposures.JDs[RVMask], thisCam.DDRVs[RVMask], label = 'Blue', color ='b' )\n",
-      "#             plt.errorbar(thisStar.exposures.JDs[RVMask], thisCam.RVs[RVMask], yerr=thisCam.sigmas[RVMask],fmt='.', label = 'Blue', color ='b' )\n",
-      "\n",
-      "        #sine plot\n",
-      "            # start_day = 56889.000000 # The Julian date for CE  2014 August 20 00:00:00.0 UT  (10am australia)\n",
-      "            # end_day = 56895.000000 #The Julian date for CE  2014 August 26 00:00:00.0 UT (10am australia)\n",
-      "            # days = np.linspace(start_day, end_day) \n",
-      "            # K1=26100\n",
-      "            # peri_time = 19298.85\n",
-      "            # P=4.8202\n",
-      "            # peri_arg=269.3\n",
-      "            # RV = K1* np.sin( (days-peri_time)/P*2*np.pi - peri_arg/360*2*np.pi )\n",
-      "            # plt.plot(days, RV, linewidth = 1, label = 'rhoTuc' )\n",
+      "    #sine plot\n",
+      "#     start_day = 56889.000000 # The Julian date for CE  2014 August 20 00:00:00.0 UT  (10am australia)\n",
+      "#     end_day = 56895.000000 #The Julian date for CE  2014 August 26 00:00:00.0 UT (10am australia)\n",
+      "#     days = np.linspace(start_day, end_day) \n",
+      "#     K1=26100\n",
+      "#     peri_time = 19298.85\n",
+      "#     P=4.8202\n",
+      "#     peri_arg=269.3\n",
+      "#     RV = K1* np.sin( (days-peri_time)/P*2*np.pi - peri_arg/360*2*np.pi )\n",
+      "#     plt.plot(days, RV, linewidth = 1, label = 'rhoTuc' )\n",
       "\n",
       "    plt.xlabel('MJD')\n",
       "    plt.ylabel('RV [m/s]')\n",
