--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:69b50c3167b689d780e96a97b9114894ab8a26868085676f1f5cc046da1a7477"
+  "signature": "sha256:7e41af0bcb0983bdcf93f969b96873962a7e720d51d00df84486297d4d52e183"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -204,8 +204,8 @@
       "#                     plt.plot(flux2)\n",
       "#                     plt.plot(CCCurve)\n",
       "#                     plt.show()\n",
-      "                print 'max_idx, len(CCCurve) =',np.where(CCCurve==max(CCCurve)), CCCurve.shape\n",
       "                try:\n",
+      "#                     print 'max_idx, len(CCCurve) =',np.where(CCCurve==max(CCCurve)), CCCurve.shape\n",
       "                    corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
       "                except: \n",
       "                    print 'cc',CCCurve,\n",
